<package format="2">
  <name>sweetie_bot_robot_model</name>
  <version>1.0.0</version>
  <description>Robot joint semantic service: kinematic chains, joints order and etc</description>
  <maintainer email="fsdfur@gmail.com">mutronics</maintainer>

  <license>BSD</license>

  <url type="website">https://gitlab.com/sweetie-bot/sweetie_doc/wikis</url>
  <url type="website">sweetiebot.net</url>
  <!-- <url type="bugtracker"></url> -->

  <author>mutronics</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS and OROCOS packages -->
  <depend>rtt</depend>
  <depend>orogen</depend>
  <depend>rtt_ros</depend>
  <depend>orocos_kdl</depend>
  <depend>kdl_parser</depend>
  <!-- ROS and OROCOS datatypes -->
  <!-- SWEETIEBOT packages -->
  <depend>sweetie_bot_logger</depend>
  <!-- SWEETIEBOT datatypes -->

  <export>
	  <rtt_ros>
		  <!-- Plugin deps are loaded automatically by the rtt_ros import service -->
	  </rtt_ros>
  </export>
</package>
