<?xml version="1.0"?>
<package>
  <name>sweetie_bot_kinematics_msgs</name>
  <version>0.0.0</version>
  <description>The sweetie_bot_kinematics_msgs package</description>

  <maintainer email="fsdfur@gmail.com">mutronics</maintainer>

  <license>BSD</license>

  <url type="website">https://sweetiebot.net</url>
  <url type="website">https://gitlab.com/sweetie-bot/sweetie_doc/wikis</url>

  <author>mutronics</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kdl_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kdl_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
