<package>
  <name>sweetie_bot_agregator</name>
  <version>1.0.0</version>
  <description>This package contains the components of the sweetie_bot_agregator package</description>
  <maintainer email="unknown@maintainer.com">Unknown Author</maintainer>

  <license>Unknown</license>

  <url type="sweetiebot.net"></url>
  <!-- <url type="bugtracker"></url> -->

  <author>mutronics</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>orogen</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>rtt_sensor_msgs</build_depend>
  <build_depend>sweetie_bot_robot_model</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_rosnode</run_depend>
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>rtt_rosparam</run_depend>
  <run_depend>rtt_std_msgs</run_depend>
  <run_depend>rtt_sensor_msgs</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>rtt_sensor_msgs</run_depend>
  <run_depend>sweetie_bot_robot_model</run_depend>
  <export>
  </export>
</package>
