<package format="2">
  <name>sweetie_bot_gait_walking_3_plus_1</name>
  <version>1.0.0</version>
  <description>This package contains the components of the sweetie_bot_gait_walking_3_plus_1 package</description>
  <maintainer email="rovboma@gmail.com">Maxim Rovbo</maintainer>

  <license>BSD</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author>Maxim Rovbo</author>

  <depend>rtt</depend>
  <depend>orogen</depend>
  <depend>sweetie_bot_resource_control_msgs</depend>
  <depend>sweetie_bot_resource_control_service</depend>

  <export>

  </export>
</package>
